[package]
name = "ge"
version = "0.0.1"
edition = "2021"

[dependencies]
atty = "0.2"
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
tempfile = "3.3"

[profile.release]
strip = "symbols"

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = ["apt-get update && apt-get install --assume-yes vim-common nano"]
