[package]
name = "ge"
version = "0.0.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
tempfile = "3.8"

[profile.release]
strip = "symbols"

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = ["apt-get update && apt-get install --assume-yes vim-common nano"]
